src/antlr/parsing/MercuryDSLParser.java
// Generated from MercuryDSL.g4 by ANTLR 4.8

package antlr.parsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MercuryDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, ID=82, CONSTINT=83, COMMENT=84, LINE_COMMENT=85, WS=86;
	public static final int
		RULE_program = 0, RULE_crashes = 1, RULE_spec = 2, RULE_safety_spec = 3, 
		RULE_stateDescList = 4, RULE_stateDesc = 5, RULE_liveness_spec = 6, RULE_livpred = 7, 
		RULE_var = 8, RULE_id_var = 9, RULE_int_var = 10, RULE_set_var = 11, RULE_action = 12, 
		RULE_domain = 13, RULE_loc = 14, RULE_handler = 15, RULE_react = 16, RULE_identifierList = 17, 
		RULE_event = 18, RULE_prop = 19, RULE_cardinality = 20, RULE_stmt = 21, 
		RULE_updateStmt = 22, RULE_sendStmt = 23, RULE_msg = 24, RULE_controlStmt = 25, 
		RULE_targetLocation = 26, RULE_iexp = 27, RULE_nexp = 28, RULE_stexp = 29, 
		RULE_bexp = 30, RULE_cmpop = 31, RULE_eqop = 32, RULE_scalar = 33, RULE_ihole = 34, 
		RULE_bhole = 35, RULE_chole = 36, RULE_lhole = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "crashes", "spec", "safety_spec", "stateDescList", "stateDesc", 
			"liveness_spec", "livpred", "var", "id_var", "int_var", "set_var", "action", 
			"domain", "loc", "handler", "react", "identifierList", "event", "prop", 
			"cardinality", "stmt", "updateStmt", "sendStmt", "msg", "controlStmt", 
			"targetLocation", "iexp", "nexp", "stexp", "bexp", "cmpop", "eqop", "scalar", 
			"ihole", "bhole", "chole", "lhole"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'machine'", "'satisfies'", "'variables'", "'actions'", "'crash'", 
			"'initial'", "':'", "';'", "'locations'", "'safety'", "'liveness'", "'('", 
			"')'", "'atmost'", "','", "'{'", "'}'", "'atleast'", "'&&'", "'||'", 
			"'AF'", "'AG'", "'implies'", "'F'", "'received'", "'sent'", "'id'", "'int'", 
			"'['", "']'", "':='", "'set'", "'env'", "'br'", "'rz'", "'unit'", "'location'", 
			"'on'", "'passive'", "'do'", "'where'", "'reply'", "'win:'", "'lose:'", 
			"'ValueCons'", "'<'", "'>'", "'PartitionCons'", "'_'", "'recv'", "'='", 
			"'.add'", "'.remove'", "'.addAll'", "'.removeAll'", "'rend'", "'broadcast'", 
			"'if'", "'else'", "'goto'", "'.sID'", "'self'", "'.payld'", "'.desVal'", 
			"'*'", "'/'", "'+'", "'-'", "'All'", "'Empty'", "'.winS'", "'.loseS'", 
			"'True'", "'False'", "'!'", "'<='", "'>='", "'=='", "'!='", "'N'", "'??'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "ID", "CONSTINT", 
			"COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MercuryDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MercuryDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public VarContext var;
		public List<VarContext> vars = new ArrayList<VarContext>();
		public ActionContext action;
		public List<ActionContext> actions = new ArrayList<ActionContext>();
		public LocContext loc;
		public List<LocContext> locs = new ArrayList<LocContext>();
		public TerminalNode ID() { return getToken(MercuryDSLParser.ID, 0); }
		public TerminalNode EOF() { return getToken(MercuryDSLParser.EOF, 0); }
		public SpecContext spec() {
			return getRuleContext(SpecContext.class,0);
		}
		public CrashesContext crashes() {
			return getRuleContext(CrashesContext.class,0);
		}
		public List<LocContext> loc() {
			return getRuleContexts(LocContext.class);
		}
		public LocContext loc(int i) {
			return getRuleContext(LocContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			match(ID);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(78);
				match(T__1);
				setState(79);
				spec();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(82);
				match(T__2);
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(83);
					((ProgramContext)_localctx).var = var();
					((ProgramContext)_localctx).vars.add(((ProgramContext)_localctx).var);
					}
					}
					setState(86); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__27) | (1L << T__31))) != 0) );
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(90);
				match(T__3);
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(91);
					((ProgramContext)_localctx).action = action();
					((ProgramContext)_localctx).actions.add(((ProgramContext)_localctx).action);
					}
					}
					setState(94); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__32) | (1L << T__33) | (1L << T__34))) != 0) );
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(98);
				match(T__4);
				setState(99);
				crashes();
				}
			}

			setState(102);
			match(T__5);
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(103);
				((ProgramContext)_localctx).loc = loc();
				((ProgramContext)_localctx).locs.add(((ProgramContext)_localctx).loc);
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__36 );
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CrashesContext extends ParserRuleContext {
		public IdentifierListContext actioncrashlist;
		public IdentifierListContext locationcrashlist;
		public List<IdentifierListContext> identifierList() {
			return getRuleContexts(IdentifierListContext.class);
		}
		public IdentifierListContext identifierList(int i) {
			return getRuleContext(IdentifierListContext.class,i);
		}
		public CrashesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_crashes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterCrashes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitCrashes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitCrashes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CrashesContext crashes() throws RecognitionException {
		CrashesContext _localctx = new CrashesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_crashes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(110);
				match(T__3);
				setState(111);
				match(T__6);
				setState(112);
				((CrashesContext)_localctx).actioncrashlist = identifierList();
				setState(113);
				match(T__7);
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(117);
				match(T__8);
				setState(118);
				match(T__6);
				setState(119);
				((CrashesContext)_localctx).locationcrashlist = identifierList();
				setState(120);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecContext extends ParserRuleContext {
		public Liveness_specContext liveness_spec;
		public List<Liveness_specContext> livespecs = new ArrayList<Liveness_specContext>();
		public Safety_specContext safety_spec() {
			return getRuleContext(Safety_specContext.class,0);
		}
		public List<Liveness_specContext> liveness_spec() {
			return getRuleContexts(Liveness_specContext.class);
		}
		public Liveness_specContext liveness_spec(int i) {
			return getRuleContext(Liveness_specContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(124);
				match(T__9);
				setState(125);
				safety_spec(0);
				}
			}

			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(128);
				match(T__10);
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(129);
					((SpecContext)_localctx).liveness_spec = liveness_spec();
					((SpecContext)_localctx).livespecs.add(((SpecContext)_localctx).liveness_spec);
					}
					}
					setState(132); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__20 || _la==T__21 );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Safety_specContext extends ParserRuleContext {
		public Safety_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_safety_spec; }
	 
		public Safety_specContext() { }
		public void copyFrom(Safety_specContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SafetySpecAtMostContext extends Safety_specContext {
		public Token maxNum;
		public StateDescListContext stateDescList() {
			return getRuleContext(StateDescListContext.class,0);
		}
		public TerminalNode CONSTINT() { return getToken(MercuryDSLParser.CONSTINT, 0); }
		public SafetySpecAtMostContext(Safety_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSafetySpecAtMost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSafetySpecAtMost(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSafetySpecAtMost(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SafetySpecParenContext extends Safety_specContext {
		public Safety_specContext safety_spec() {
			return getRuleContext(Safety_specContext.class,0);
		}
		public SafetySpecParenContext(Safety_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSafetySpecParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSafetySpecParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSafetySpecParen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SafetySpecAndContext extends Safety_specContext {
		public Safety_specContext l;
		public Safety_specContext r;
		public List<Safety_specContext> safety_spec() {
			return getRuleContexts(Safety_specContext.class);
		}
		public Safety_specContext safety_spec(int i) {
			return getRuleContext(Safety_specContext.class,i);
		}
		public SafetySpecAndContext(Safety_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSafetySpecAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSafetySpecAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSafetySpecAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SafetySpecAtLeastContext extends Safety_specContext {
		public Token minNum;
		public StateDescListContext stateDescList() {
			return getRuleContext(StateDescListContext.class,0);
		}
		public TerminalNode CONSTINT() { return getToken(MercuryDSLParser.CONSTINT, 0); }
		public SafetySpecAtLeastContext(Safety_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSafetySpecAtLeast(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSafetySpecAtLeast(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSafetySpecAtLeast(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SafetySpecOrContext extends Safety_specContext {
		public Safety_specContext l;
		public Safety_specContext r;
		public List<Safety_specContext> safety_spec() {
			return getRuleContexts(Safety_specContext.class);
		}
		public Safety_specContext safety_spec(int i) {
			return getRuleContext(Safety_specContext.class,i);
		}
		public SafetySpecOrContext(Safety_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterSafetySpecOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitSafetySpecOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitSafetySpecOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Safety_specContext safety_spec() throws RecognitionException {
		return safety_spec(0);
	}

	private Safety_specContext safety_spec(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Safety_specContext _localctx = new Safety_specContext(_ctx, _parentState);
		Safety_specContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_safety_spec, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				{
				_localctx = new SafetySpecParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(137);
				match(T__11);
				setState(138);
				safety_spec(0);
				setState(139);
				match(T__12);
				}
				break;
			case T__13:
				{
				_localctx = new SafetySpecAtMostContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(141);
				match(T__13);
				setState(142);
				match(T__11);
				setState(143);
				((SafetySpecAtMostContext)_localctx).maxNum = match(CONSTINT);
				setState(144);
				match(T__14);
				setState(145);
				match(T__15);
				setState(146);
				stateDescList(0);
				setState(147);
				match(T__16);
				setState(148);
				match(T__12);
				}
				break;
			case T__17:
				{
				_localctx = new SafetySpecAtLeastContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(150);
				match(T__17);
				setState(151);
				match(T__11);
				setState(152);
				((SafetySpecAtLeastContext)_localctx).minNum = match(CONSTINT);
				setState(153);
				match(T__14);
				setState(154);
				match(T__15);
				setState(155);
				stateDescList(0);
				setState(156);
				match(T__16);
				setState(157);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(169);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(167);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new SafetySpecAndContext(new Safety_specContext(_parentctx, _parentState));
						((SafetySpecAndContext)_localctx).l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_safety_spec);
						setState(161);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(162);
						match(T__18);
						setState(163);
						((SafetySpecAndContext)_localctx).r = safety_spec(3);
						}
						break;
					case 2:
						{
						_localctx = new SafetySpecOrContext(new Safety_specContext(_parentctx, _parentState));
						((SafetySpecOrContext)_localctx).l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_safety_spec);
						setState(164);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(165);
						match(T__19);
						setState(166);
						((SafetySpecOrContext)_localctx).r = safety_spec(2);
						}
						break;
					}
					} 
				}
				setState(171);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StateDescListContext extends ParserRuleContext {
		public StateDescContext stateDesc() {
			return getRuleContext(StateDescContext.class,0);
		}
		public StateDescListContext stateDescList() {
			return getRuleContext(StateDescListContext.class,0);
		}
		public StateDescListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateDescList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).enterStateDescList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MercuryDSLListener ) ((MercuryDSLListener)listener).exitStateDescList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MercuryDSLVisitor ) return ((MercuryDSLVisitor<? extends T>)visitor).visitStateDescList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateDescListContext stateDescList() throws RecognitionException {
		return stateDescList(0);
	}

	private StateDescListContext stateDescList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StateDescListContext _localctx = new StateDescListContext(_ctx, _parentState);
		StateDescListContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_stateDescList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(173);
			stateDesc();
			}
			_ctx.stop = _input.LT(-1);
			setState(180);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StateDescListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_stateDescList);
					setState(175);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(176);
					match(T__14);
					setState(177);
					stateDesc();
					}
					} 
				}
				setState(182);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

